# enarx

./: .codecov.yml  .gitignore  .mailmap  .travis.yml  BUILD.md  CONTRIBUTING.md  Cargo.toml  FUNDING.md  LICENSE  Makefile.toml  PROTOCOL.md  README-DEBUG.md  README.md  README.tpl  SECURITY.md  STYLE.md  build.rs  cc  deny.toml  flake.nix  new documentation for Rust safety block comments  rust-toolchain.toml  shell.nix
attestation-types/: Cargo.toml
attestation-types/src/: lib.rs  quote.rs  report.rs  ti.rs
crates/enarx-config/: Cargo.toml  Enarx_toml.md  README.md
crates/enarx-config/src/: lib.rs
crates/exec-wasmtime/: Cargo.toml
crates/exec-wasmtime-bin/: Cargo.toml  deny.toml
crates/exec-wasmtime-bin/src/: main.rs
crates/exec-wasmtime/src/: config.rs  lib.rs  log.rs  main.rs  workload.rs
crates/exec-wasmtime/src/loader/: acquired.rs  attested.rs  connected.rs  mod.rs  pki.rs  requested.rs
crates/exec-wasmtime/src/runtime/: mod.rs
crates/sallyport/: .gitignore  Cargo.toml  README.md
crates/sallyport/.github/: CODEOWNERS  dependabot.yml
crates/sallyport/.github/workflows/: build.yml  commisery.yml  enarxbot.yml  lint.yml  test.yml
crates/sallyport/internal/syscall/: Cargo.toml
crates/sallyport/internal/untrusted/: Cargo.toml
crates/sallyport/src/: elf.rs  lib.rs  libc.rs  tests.rs
crates/sallyport/src/guest/: handler.rs  mod.rs  platform.rs  tls.rs
crates/sallyport/src/host/: enarxcall.rs  mod.rs  syscall.rs
crates/sallyport/tests/: integration.rs  integration_tests.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crt0stack/: Cargo.toml
crt0stack/examples/: builder.rs  example.rs  reader.rs
crt0stack/src/: auxv.rs  builder.rs  entry.rs  lib.rs  reader.rs
enarx-keep/: Cargo.toml  build.rs
enarx-keep-sev/: Cargo.toml
enarx-keep-sev-shim/: Cargo.toml  README.md  build.rs  layout.ld  link.json  qemu-test-runner.sh
enarx-keep-sev-shim/asm/: rcrt1.c  start.S  utils.s
enarx-keep-sev-shim/src/: addr.rs  asm.rs  asm.s  frame_allocator.rs  gdt.rs  hostcall.rs  lib.rs  main.rs  memory.rs  no_std.rs  paging.rs  payload.rs  print.rs  shim_stack.rs  singleton.rs  strlen.rs  syscall.S  syscall.rs  usermode.S  usermode.rs
enarx-keep-sev-shim/src/arch/: mod.rs
enarx-keep-sev-shim/src/libc/: mmap.rs  mod.rs  test.rs
enarx-keep-sev/src/: error.rs  kvmvm.rs  main.rs  vm.rs  x86_64.rs
enarx-keep-sev/src/arch/: mod.rs
enarx-keep-sev/src/vm/: builder.rs  cpu.rs  mem.rs  mod.rs  syscall.rs
enarx-keep-sgx/: Cargo.toml  README.md  build.rs
enarx-keep-sgx-shim/: Cargo.toml  build.rs  layout.ld  link.json
enarx-keep-sgx-shim/.cargo/: config
enarx-keep-sgx-shim/src/: elf.rs  entry.rs  event.rs  handler.rs  heap.rs  libc.rs  main.rs  start.S  start.s
enarx-keep-sgx/src/: builder.rs  component.rs  contents.rs  convert.rs  enclave.S  enclave.rs  enclave.s  enter.s  layout.rs  main.rs  map.rs  page.rs  paged.rs
enarx-keep/internal/sallyport/: Cargo.toml
enarx-keep/internal/shim-sev/: Cargo.toml
enarx-keep/internal/shim-sgx/: Cargo.toml
enarx-keep/shims/sgx/: Cargo.toml
enarx-keep/shims/shim-sev/: Cargo.toml
enarx-keep/shims/shim-sgx/: Cargo.toml
enarx-keep/src/: lib.rs  main.rs
enarx-keep/src/backend/: kvm.rs  mod.rs  sev.rs  sgx.rs
enarx-keep/src/binary/: component.rs  segment.rs
enarx-keep/tests/: integration_tests.rs
enarx-keepmgr/: Cargo.toml
enarx-keepmgr/src/: access.rs  binary.rs  main.rs  span.rs
enarx-keepmgr/src/drivers/: debug.rs  mod.rs
host-components/: Cargo.toml  README.md
host-components/key-material/: cert.pem  client.p12  key.pem  req.pem  server.crt  server.key
host-components/src/: app-loader-tester.rs  keep-loader-tester.rs  keep-loader.rs  keep-manager-tester.rs  lib.rs  main.rs  main.rs~
iocuddle-sgx/: Cargo.toml  build.rs
iocuddle-sgx/src/: lib.rs
keep-libruntime/: Cargo.toml
keep-libruntime/fixtures/: hello_world.wasm  return_1.wasm  return_1.wkld
keep-libruntime/src/: lib.rs  workload.rs
keep-runtime/: Cargo.toml  Rocket.toml  build.rs
keep-runtime/fixtures/: no_export.wasm  no_export.wat  return_1.wasm  wasi_snapshot1.wasm
keep-runtime/src/: main.rs  virtfs.rs  workload.rs
loader/: Cargo.toml
loader/src/: lib.rs  segment.rs
nolibc/: Cargo.toml
nolibc/src/: lib.rs
nolibc/src/x86_64/: error.rs  mod.rs  syscall.rs
rcrt1/: Cargo.toml
rcrt1/src/: lib.rs
sev/: .travis.yml  Cargo.toml  Makefile.toml  build.rs
sev-types/: Cargo.toml
sev-types/src/: lib.rs  platform.rs
sev-types/src/command/: code.rs  mod.rs
sev/src/: launch.rs  lib.rs  util.rs
sev/src/certs/: chain.rs  crypto.rs  mod.rs  util.rs
sev/src/firmware/: linux.rs  mod.rs  types.rs
sev/src/launch/: launcher.rs  linux.rs  types.rs
sev/src/session/: key.rs  mod.rs
sev/tests/: api.rs  certs.rs  launch.rs  session.rs
sev/tests/naples/: ark.cert.bad  ark.rs  ask.rs  cek.cert  cek.rs  mod.rs  oca.rs  pdh.rs  pek.cert  pek.rs
sev/tests/rome/: ark.rs  ask.cert  ask.rs  cek.cert  cek.rs  mod.rs  oca.cert  pdh.cert  pek.cert
sevctl/: Cargo.toml  README.md
sevctl/src/: main.rs  platform.rs
sevctl/src/naples/: ask.cert
sgx/: Cargo.toml  Makefile.toml  build.rs
sgx-crypto/: Cargo.toml
sgx-crypto/src/: lib.rs
sgx-hasher/: Cargo.toml
sgx-hasher/src/: .lib.rs.swp  lib.rs
sgx-show/: Cargo.toml
sgx-show/src/: exec.rs  main.rs
sgx-show/src/data/: cpuid.rs  mod.rs
sgx-show/src/sink/: bit.rs  debug.rs  mask.rs  mod.rs
sgx-sys/: Cargo.toml
sgx-sys/src/: lib.rs  secs.rs  sigstruct.rs  tcs.rs
sgx-sys/src/ioctl/: mod.rs  sgx.rs
sgx-types/: Cargo.toml
sgx-types/src/: attr.rs  attributes.rs  hasher.rs  isv.rs  lib.rs  misc.rs  miscselect.rs  page.rs  report.rs  secinfo.rs  secs.rs  sig.rs  sigstruct.rs  ssa.rs  tcs.rs  ti.rs  utils.rs  xfrm.rs
sgx/examples/: generate_report.rs
sgx/src/: crypto.rs  ioctls.rs  lib.rs
sgx/src/attestation_types/: mod.rs  quote.rs  report.rs  ti.rs
sgx/src/enclave/: builder.rs  enclave.rs  ioctls.rs  mod.rs
sgx/src/types/: attr.rs  isv.rs  mod.rs  page.rs  secs.rs  sig.rs  ssa.rs  tcs.rs
sgx/tests/: encl.ss
(+1121 files in other folders)
