[package]
name = "attestation-types"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>", "Lily Sturmann <lsturman@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testing  = { path = "../testing" }
sgx-types = { path = "../sgx-types" }
