[package]
name = "enarx-keep-sev-shim"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Harald Hoyer <harald@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
bit_field = "0.10.0"
bitflags = "1.0.4"
crt0stack = { path = "../crt0stack" }
nolibc = { path = "../nolibc" }
vmsyscall = { path = "../vmsyscall" }
x86_64 = { version = "0.9.6", default-features = false, features = ["stable"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"

# optional crates
linked_list_allocator = { version = "0.8.1", optional = true }
pic8259_simple = { version = "0.1.1", optional = true }
x2apic = { version = "0.1.0", optional = true }
uart_16550 =  { version = "0.2.4", default-features = false, features = ["stable"], optional = true}
xmas-elf = { version = "0.7.0", optional = true }

[build-dependencies]
cc = "1.0.37"

[features]
default = [ ]
nightly = [ ]
inline_asm = [ "nightly", "x86_64/nightly"]
qemu = [ "uart_16550", "xmas-elf" ]
test_qemu = [ "nightly", "timer", "allocator", "x86_64/abi_x86_interrupt", "qemu" ]
test_kvm = [ "nightly", "allocator", "x86_64/abi_x86_interrupt"]
timer = [ "nightly", "x2apic", "pic8259_simple" ]
allocator = [ "nightly", "linked_list_allocator"]
