[package]
name = "enarx-keep-sev-shim"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
bounds = { path = "../bounds" }
units = { path = "../units" }
memory = { path = "../memory" }
sallyport = { path = "../sallyport" }
libc = { version = "0.2.69", features = [] }
x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
spinning = { version = "0.0", default-features = false}

[build-dependencies]
cc = "1.0.37"
walkdir = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
lto = true
