[package]
name = "enarx-keep-sev-shim"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
rcrt1 = { path = "../rcrt1" }
bounds = { path = "../bounds" }
units = { path = "../units" }
memory = { path = "../memory" }
sallyport = { path = "../sallyport" }
crt0stack = { path = "../crt0stack" }
libc = { version = "0.2.69", features = [] }
x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }
spinning = { version = "0.0", default-features = false}
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
goblin = { version = "0.2", default-features = false, features = [ "elf64" ] }

[profile.dev.package.rcrt1]
opt-level = 3

[build-dependencies]
cc = "1.0.37"
walkdir = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
lto = true
