[package]
name = "enarx-keep-sgx-shim"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
crt0stack = { path = "../crt0stack" }
sgx-types = { path = "../sgx-types" }
nolibc = { path = "../nolibc" }
memory = { path = "../memory" }
span = { path = "../span" }

[build-dependencies]
cc = "*"
