[package]
name = "enarx-keep-sgx-shim"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
crt0stack = { path = "../crt0stack" }
intel-types = { path = "../intel-types" }
sgx-types = { path = "../sgx-types" }
memory = { path = "../memory" }
bounds = { path = "../bounds" }
libc = { version = "0.2", features = [] }
enumerate = { path = "../enumerate" }

[build-dependencies]
cc = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
lto = true
