[package]
name = "enarx-keep-sgx"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
goblin = "0.2.3"
intel-types = { path = "../intel-types" }
loader = { path = "../loader" }
sallyport = { path = "../sallyport" }
sgx = { path = "../sgx" }
memory = { path = "../memory" }
units = { path = "../units" }
bounds = { path = "../bounds" }
structopt = { version = "0.3", default-features = false }
bitflags = "1.2"
openssl = "=0.10.29"

[patch.crates-io]
openssl = { git = 'https://github.com/npmccallum/rust-openssl', branch='patch' }
