[package]
name = "enarx-keep"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel-types = { path = "../intel-types" }
sallyport = { path = "../sallyport" }
bounds = { path = "../bounds" }
memory = { path = "../memory" }
units = { path = "../units" }
mmap = { path = "../mmap" }
sgx = { path = "../sgx" }
kvm-bindings = "0.3.0"
kvm-ioctls = "0.5.0"
structopt = "0.3"
colorful = "0.2"
anyhow = "1.0"
goblin = "0.2"
libc = "0.2"
x86_64 = { version = "0.11.0", default-features = false, features = ["stable"] }

[patch.crates-io]
openssl = { git = 'https://github.com/npmccallum/rust-openssl', branch='patch' }
