[package]
name = "enarx-keep"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sallyport = { path = "../sallyport" }
memory = { path = "../memory" }
mmap = { path = "../mmap" }
sgx = { path = "../sgx" }
x86_64 = { version = "0.11", default-features = false, features = ["stable"] }
kvm-bindings = "0.3"
kvm-ioctls = "0.5"
structopt = "0.3"
colorful = "0.2"
nbytes = "0.1"
anyhow = "1.0"
goblin = "0.2"
libc = "0.2"
lset = "0.1"
