[package]
name = "iocuddle-sgx"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
iocuddle = { path = "../iocuddle" }
sgx-types = { path = "../sgx-types" }

[dev-dependencies]
sgx-crypto = { path = "../sgx-crypto" }
openssl = { version = "0.10", features = [ "vendored" ] }
rstest = "0.5.2"
