[package]
name = "iocuddle-sgx"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx-types = { path = "../sgx-types" }
iocuddle = { path = "../iocuddle" }
addr = { path = "../addr" }
bitflags = "1.2"

[dev-dependencies]
openssl = { version = "0.10", features = [ "vendored" ] }
sgx-crypto = { path = "../sgx-crypto" }
rstest = "0.5"
