[package]
name = "iocuddle-sgx"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx-types = { path = "../sgx-types" }
iocuddle = { path = "../iocuddle" }
memory = { path = "../memory" }
bitflags = "1.2"

[dev-dependencies]
openssl = { version = "=0.10.29", features = [ "vendored" ] }
sgx-crypto = { path = "../sgx-crypto" }
bounds = { path = "../bounds" }
rstest = "0.6"

[patch.crates-io]
openssl = { git = 'https://github.com/npmccallum/rust-openssl', branch='patch' }
