[package]
name = "keep-runtime"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>", "Daiki Ueno <dueno@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "0.19.0", default-features = false }
wasmtime-wasi = { version = "0.19.1", default-features = false }
wasi-common = { version = "0.19.1", default-features = false }

env_logger = "0.7"
log = "0.4"

[build-dependencies]
wat = "1.0"

[profile.release]
incremental = false
codegen-units = 1
lto = true
