[package]
name = "nolibc"
version = "0.1.0"
authors = ["Harald Hoyer <npmccallum@redhat.com>", "Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

categories = [
    "no-std",
]

keywords = [
    "syscall",
    "no_std",
    "errno",
    "linux",
]

[dependencies]
enumerate = { path = "../enumerate" }
