[package]
name = "rcrt1"
version = "0.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", features = [] }
goblin = { version = "0.2", default-features = false, features = [ "elf64" ] }

