[package]
name = "sev-types"
version = "0.1.0"
authors = ["Connor Kuehl <ckuehl@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13"
bitflags = "1.2"
enumerate = { path = "../enumerate" }

