[package]
name = "sev"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
default = []
dangerous_tests = []

[dependencies]
openssl = { version = "0.10", optional = true, features = [ "vendored" ] }
bitflags = "1.2.1"
codicon = "2.1.0"
bitfield = "0.13"
iocuddle = "0.1"
